# apilyzer

./: .readthedocs.yaml  LICENSE  README.md  README_PT.md  README_pt.md  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yaml
apilizer/: cli.py  verify.py
apilyzer/: cli.py  verify.py
docs/: index.md
docs/api/: verify.md
tests/: test_cli.py  test_verify.py
