[tool.poetry]
name = "apilizer"
version = "0.1.1"
description = "APIlizer is a python library that aims to analyze the level of maturity of REST APIs, following the Richardson maturity model"
license = "MIT"
authors = ["Marco Antônio <marcomartins06@rede.ulbra.br>"]
readme = "README.md"
packages = [{ include = "apilizer" }]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
]

[tool.poetry.urls]
"Documentation" = "https://apilizer.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/Tchez/apilizer"
"Bug Tracker" = "https://github.com/Tchez/apilizer/issues"


[tool.poetry.scripts]
apilizer = "apilizer.cli:app"


[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.25.0"
typer = "^0.9.0"
rich = "^13.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.12.0"
respx = "^0.20.2"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.3.1"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=apilizer -vv"
post_test = "coverage html"
